# health_score_api

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  postgres-custom.Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  structure.txt
app/: main.py
app/api/: deps.py
app/api/v1/: activities.py  auth.py  health.py  health_score.py  users.py
app/api/v1/endpoints/: health.py
app/core/: config.py  password_utils.py  security.py  utils.py
app/crud/: base.py
app/db/: base.py  session.py
app/db/migrations/: README.md  env.py
app/db/migrations/versions/: b891f2a18f0f_initial_migration.py
app/db/models/: __init__.py  activity.py  auth.py  health_record.py  sleep.py  user.py  walking.py  water.py
app/domain/: enums.py
app/logging/: dynamodb_logger.py
app/schemas/: __init__.py  activity.py  auth.py  base.py  health.py  health_schemas.py  health_score.py  sleep.py  user.py  user_legacy.py  water.py
app/schemas/user/: __init__.py  auth.py  base.py  create.py  enums.py  response.py  update.py
app/services/: activity_service.py  auth_service.py  health.py  health_score_service.py  user_service.py
app/tests/: conftest.py  test_activities.py  test_auth.py  test_health_score.py  test_main.py  test_users.py
docs/: structure_clean.txt
health_score_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
infrastructure/: Dockerfile  docker-compose.yml
infrastructure/aws_dynamodb/: logging_setup.tf
infrastructure/aws_ec2/: ec2_setup.sh
infrastructure/terraform/: main.tf  outputs.tf  variables.tf
scripts/: deploy_aws.sh  init-db.sh  init_admin.py  init_db.py  init_test_data.py  run_tests.sh  setup_alembic.sh
