[metadata]
description-file = README.md

[pycodestyle]
max-line-length = 88
exclude = .git,__pycache__,build,dist,.tox,.pytest_cache,venv

[flake8]
max-line-length = 88
exclude = .git,__pycache__,build,dist,.tox,.pytest_cache,venv
max-complexity = 10
select = B,C,E,F,W,T4,B9
ignore = E203, E501, W503, E226, E252

[isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True

[coverage:run]
source = app
omit =
    */tests/*
    */migrations/*
    */__pycache__/*
    */venv/*

[coverage:report]
show_missing = True
skip_covered = True
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError
    raise ValueError
    raise

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
